# CADET-Python-Simulator

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
.github/workflows/: pipeline.yml  publish.yml  ruff.yml
CADETPythonSimulator/: __init__.py  cake_compressibility.py  componentsystem.py  coupling_interface.py  distribution_base.py  exception.py  field.py  rejection.py  residual.py  simulator.py  solver.py  state.py  system.py  system_solver.py  unit_operation.py  viscosity.py
tests/: test_distribution.py  test_field.py  test_rejection.py  test_residual.py  test_simulation.py  test_simulator.py  test_solver.py  test_state.py  test_system.py  test_system_solver.py  test_temp.csv  test_unit_operation.py  test_viscosity.py
